--- a/lair/client/views/hosts/host_list.html
+++ b/lair/client/views/hosts/host_list.html
@@ -1,25 +1,27 @@
 <template name="hostList">
-  <div class="row-fluid">
-    <div class="span2">
-      {{> sideNav}}
-    </div>
-    <div class="span10">
-      <div class="row-fluid">
-        <div class="span12">
-          <div class="btn-group">
-            <button id="grey" type="button" class="btn host-status-button hover-hand lair-grey {{hostStatusButtonActive 'grey'}}"></button>
-            <button id="blue" type="button" class="btn host-status-button hover-hand lair-blue {{hostStatusButtonActive 'blue'}}"></button>
-            <button id="green" type="button" class="btn host-status-button hover-hand lair-green {{hostStatusButtonActive 'green'}}"></button>
-            <button id="orange" type="button" class="btn host-status-button hover-hand lair-orange {{hostStatusButtonActive 'orange'}}"></button>
-            <button id="red" type="button" class="btn host-status-button hover-hand lair-red {{hostStatusButtonActive 'red'}}"></button>
-            {{#if flagFilter}}
-              <button type="button" id="flag-filter-disable" class="btn flag-filter hover-hand"><i class="fa fa-flag"></i></button>
-            {{else}}
-              <button type="button" id="flag-filter-enable" class="btn flag-filter hover-hand"><i class="fa fa-flag-o"></i></button>
-            {{/if}}
+    <div class="row-fluid">
+        <div class="span2">
+            {{> sideNav}}
         </div>
-        <a class="btn btn-success" href="/project/{{projectId}}/hosts/new">Add a host</a>
-        <span class="pull-right">
+        <div class="span10">
+            <div class="row-fluid">
+                <div class="span12">
+                    <div class="btn-group">
+                        <button id="grey" type="button" class="btn host-status-button hover-hand lair-grey {{hostStatusButtonActive 'grey'}}"></button>
+                        <button id="blue" type="button" class="btn host-status-button hover-hand lair-blue {{hostStatusButtonActive 'blue'}}"></button>
+                        <button id="green" type="button" class="btn host-status-button hover-hand lair-green {{hostStatusButtonActive 'green'}}"></button>
+                        <button id="orange" type="button" class="btn host-status-button hover-hand lair-orange {{hostStatusButtonActive 'orange'}}"></button>
+                        <button id="red" type="button" class="btn host-status-button hover-hand lair-red {{hostStatusButtonActive 'red'}}"></button>
+                        {{#if flagFilter}}
+                        <button type="button" id="flag-filter-disable" class="btn flag-filter hover-hand"><i class="fa fa-flag"></i>
+                        </button>
+                        {{else}}
+                        <button type="button" id="flag-filter-enable" class="btn flag-filter hover-hand"><i class="fa fa-flag-o"></i>
+                        </button>
+                        {{/if}}
+                    </div>
+                    <a class="btn btn-success" href="/project/{{projectId}}/hosts/new">Add a host</a>
+                    <span class="pull-right">
             <p class="pull-right">
             <input id="host-list-search" type="text" class="search-query" placeholder="Search" value="{{searchTerm}}" />
             </p>
@@ -30,50 +32,47 @@
             </p>
             {{/if}}
           </span>
+                </div>
+            </div>
+            <br />
+            <div class="row-fluid">
+                {{#if loading}} {{> spinner}} {{else}}
+                <div class="span12">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th class="onepix"></th>
+                                <th>IP Address</th>
+                                <th>Hostname</th>
+                                <th>Operating System</th>
+                                <th>Last Modified By</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{#each hosts}}
+                            <tr>
+                                <td>
+                                    {{#if flag}}
+                                    <i class="fa fa-flag flag-enabled hover-hand"></i> {{else}}
+                                    <i class="fa fa-flag-o flag-disabled hover-hand"></i> {{/if}}
+                                </td>
+                                <td class="{{status}}"><a class="dontstyle" href="/project/{{projectId}}/hosts/{{_id}}">{{string_addr}}</a>
+                                </td>
+                                <td class="hover-hand host-status {{status}}">{{hostnames.[0]}}</td>
+                                <td class="hover-hand host-status {{status}}">{{os.fingerprint}}</td>
+                                <td class="hover-hand host-status {{status}}">{{last_modified_by}}</td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
+                {{/if}}
+            </div>
+            <div class="row-fluid">
+                <div class="span6">
+                    <p>Displaying records {{start}} to {{end}} of {{total}}</p>
+                </div>
+            </div>
         </div>
-      </div>
-      <br />
-      <div class="row-fluid">
-      {{#if loading}}
-        {{> spinner}}
-        {{else}}
-        <div class="span12">
-          <table class="table table-bordered">
-            <thead>
-            <tr>
-              <th class="onepix"></th>
-              <th>IP Address</th>
-              <th>Hostname</th>
-              <th>Operating System</th>
-              <th>Last Modified By</th>
-            </tr>
-            </thead>
-            <tbody>
-            {{#each hosts}}
-            <tr>
-              <td>
-              {{#if flag}}
-                <i class="fa fa-flag flag-enabled hover-hand"></i>
-              {{else}}
-                <i class="fa fa-flag-o flag-disabled hover-hand"></i>
-              {{/if}}
-          </td>
-          <td class="{{status}}"><a class="dontstyle" href="/project/{{projectId}}/hosts/{{_id}}">{{string_addr}}</a></td>
-              <td class="hover-hand host-status {{status}}">{{hostnames.[0]}}</td>
-              <td class="hover-hand host-status {{status}}">{{os.fingerprint}}</td>
-              <td class="hover-hand host-status {{status}}">{{last_modified_by}}</td>
-            </tr>
-            {{/each}}
-            </tbody>
-          </table>
-        </div>
-        {{/if}}
-      </div>
-      <div class="row-fluid">
-        <div class="span6">
-          <p>Displaying records {{start}} to {{end}} of {{total}}</p>
-        </div>
-      </div>
     </div>
-  </div>
-  </template>
+</template>
