--- a/lair/client/views/settings/includes/settings_nav.html
+++ b/lair/client/views/settings/includes/settings_nav.html
@@ -1,10 +1,12 @@
 <template name="settingsNav">
-  <div class="row-fluid">
-    <div class="span12">
-      <ul class="nav nav-tabs">
-        <li class="{{activeRouteClass 'settings'}}"><a href="{{pathFor 'settings'}}">General</a></li>
-        <li class="{{activeRouteClass 'users'}}"><a href="{{pathFor 'users'}}">Users</a></li>
-      </ul>
+    <div class="row-fluid">
+        <div class="span12">
+            <ul class="nav nav-tabs">
+                <li class="{{activeRouteClass 'settings'}}"><a href="{{pathFor 'settings'}}">General</a>
+                </li>
+                <li class="{{activeRouteClass 'users'}}"><a href="{{pathFor 'users'}}">Users</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </template>
