--- a/lair/client/views/projects/project.html
+++ b/lair/client/views/projects/project.html
@@ -1,20 +1,13 @@
 <template name="project">
-    {{#if projectId}} {{#if loading}}
-    <div style="margin-top: 100px" class="row-fluid">
-        <div class="span12">
-            {{> spinner}}
-        </div>
-    </div>
-    {{else}} {{> projectDetail}} {{/if}} {{else}}
+    {{#if projectId}} 
+        {{> projectDetail}}
+    {{else}}
     <div class="row-fluid">
         <div class="span12">
             <p class="large-font">No project selected</p>
         </div>
     </div>
     {{/if}}
-</template>
-
-<template name="projectDetail">
     {{#with project}}
     <p>
         <span class="large-font">{{project_name}}</span><span class="pull-right">
@@ -38,18 +31,6 @@
                     <p><strong>Description: </strong>{{#if description}}{{description}}{{else}}None{{/if}}</p>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="span6">
-            <h5>Hosts</h5>
-            <canvas id="hostChart" width="{{width}}" height="{{height}}"></canvas>
-            <br />
-        </div>
-        <div class="span6">
-            <h5>Vulnerabilities</h5>
-            <canvas id="vulnerabilityChart" width="{{width}}" height="{{height}}"></canvas>
-            <br />
         </div>
     </div>
     {{/with}}
