--- a/lair/client/views/projects/projects.html
+++ b/lair/client/views/projects/projects.html
@@ -1,28 +1,23 @@
 <template name="projects">
     <div class="row-fluid">
-        <div class="span4">
-            <table class="table table-striped table-bordered table-hover">
-                <caption>Projects</caption>
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th class="onepix">Creation Date</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each projects}}
-                    <tr>
-                        <td class="hover-hand project">{{project_name}}</td>
-                        <td>{{creation_date}}</td>
-                    </tr>
-                    {{/each}}
-                </tbody>
-            </table>
-            <a class="btn btn-block btn-success" href="{{pathFor 'addProject'}}">Create a new project</a>
-        </div>
-        <div class="span8">
-            {{> project}}
+        <div class="col-xs-12">
+            <span class="pull-right">
+                <a class="btn btn-success" href="{{pathFor route='addProject'}}">Create a new project</a>
+            </span>
         </div>
     </div>
-
+    <div class="row-fluid">
+        <div class="col-xs-12">
+            <ul class="list-unstyled">
+                {{#each projects}}
+                    <li class="project-li">
+                        <p><a href="/project/{{_id}}"><span class="large-font">{{project_name}}</span></a>
+                            <span class="pull-right">Created on {{creation_date}}</span></p>
+                        {{#if industry}}<p>Industry: {{industry}}</p>{{/if}}
+                        {{#if description}}<p>Description: {{description}}</p>{{/if}}
+                    </li>
+                {{/each}}
+            </ul>
+        </div>
+    </div>
 </template>
