--- a/lair/client/views/projects/projects.html
+++ b/lair/client/views/projects/projects.html
@@ -1,12 +1,12 @@
 <template name="projects">
-    <div class="row-fluid">
+    <div class="row">
         <div class="col-xs-12">
             <span class="pull-right">
                 <a class="btn btn-success" href="{{pathFor route='addProject'}}">Create a new project</a>
             </span>
         </div>
     </div>
-    <div class="row-fluid">
+    <div class="row">
         <div class="col-xs-12">
             <ul class="list-unstyled">
                 {{#each projects}}
