--- a/lair/client/views/hosts/host_list.html
+++ b/lair/client/views/hosts/host_list.html
@@ -1,11 +1,11 @@
 <template name="hostList">
-    <div class="row-fluid">
-        <div class="span2">
+    <div class="row">
+        <div class="col-xs-2">
             {{> sideNav}}
         </div>
-        <div class="span10">
-            <div class="row-fluid">
-                <div class="span12">
+        <div class="col-xs-10">
+            <div class="row">
+                <div class="col-xs-12">
                     <div class="btn-group">
                         <button id="grey" type="button" class="btn host-status-button hover-hand lair-grey {{hostStatusButtonActive 'grey'}}"></button>
                         <button id="blue" type="button" class="btn host-status-button hover-hand lair-blue {{hostStatusButtonActive 'blue'}}"></button>
@@ -22,22 +22,24 @@
                     </div>
                     <a class="btn btn-success" href="/project/{{projectId}}/hosts/new">Add a host</a>
                     <span class="pull-right">
-            <p class="pull-right">
-            <input id="host-list-search" type="text" class="search-query" placeholder="Search" value="{{searchTerm}}" />
-            </p>
-            {{#if moreToShow}}
-            <p class="pull-right">
-                <button id="prev-page" class="btn" style="margin-right: 5px"><i class="fa fa-fast-backward"></i></button>
-                <button id="next-page" class="btn" style="margin-right: 5px"><i class="fa fa-fast-forward"></i></button>
-            </p>
-            {{/if}}
-          </span>
+                        <p class="pull-right">
+                            <input id="host-list-search" type="text" class="search-query form-control" placeholder="Search" value="{{searchTerm}}" />
+                        </p>
+                        {{#if moreToShow}}
+                            <p class="pull-right">
+                            <button id="prev-page" class="btn" style="margin-right: 5px"><i class="fa fa-fast-backward"></i></button>
+                            <button id="next-page" class="btn" style="margin-right: 5px"><i class="fa fa-fast-forward"></i></button>
+                            </p>
+                        {{/if}}
+                    </span>
                 </div>
             </div>
             <br />
-            <div class="row-fluid">
-                {{#if loading}} {{> spinner}} {{else}}
-                <div class="span12">
+            <div class="row">
+                {{#if loading}}
+                    {{> spinner}}
+                {{else}}
+                <div class="col-xs-12">
                     <table class="table table-bordered">
                         <thead>
                             <tr>
@@ -68,8 +70,8 @@
                 </div>
                 {{/if}}
             </div>
-            <div class="row-fluid">
-                <div class="span6">
+            <div class="row">
+                <div class="col-xs-6">
                     <p>Displaying records {{start}} to {{end}} of {{total}}</p>
                 </div>
             </div>
