Move a lot of views over to bootstrap 3

--- a/lair/client/views/credentials/add_credential_full.html
+++ b/lair/client/views/credentials/add_credential_full.html
@@ -1,17 +1,17 @@
 <template name="addCredentialFull">
-    <div class="row-fluid">
-        <div class="span2">
+    <div class="row">
+        <div class="col-xs-2">
             {{> sideNav}}
         </div>
-        <div class="span4">
+        <div class="col-xs-4">
             {{> alerts}}
             <p>Host and Port fields are required. Password, Username, and Hash fields are optional, blank fields will be filled with 'unknown'.</p>
             <form>
-                <input type="text" class="span12" placeholder="Host" name="host" />
-                <input type="number" class="span12" min="0" max="65535" step="any" placeholder="Port" name="port" />
-                <input type="text" class="span12" placeholder="Username" name="username" />
-                <input type="text" class="span12" placeholder="Password" name="password" />
-                <input type="text" class="span12" placeholder="Hash" name="hash" />
+                <input type="text" class="col-xs-12" placeholder="Host" name="host" />
+                <input type="number" class="col-xs-12" min="0" max="65535" step="any" placeholder="Port" name="port" />
+                <input type="text" class="col-xs-12" placeholder="Username" name="username" />
+                <input type="text" class="col-xs-12" placeholder="Password" name="password" />
+                <input type="text" class="col-xs-12" placeholder="Hash" name="hash" />
                 <button type="submit" class="btn btn-block btn-primary">Submit</button>
             </form>
         </div>
