--- a/lair/client/views/errors/not_found.html
+++ b/lair/client/views/errors/not_found.html
@@ -1,6 +1,6 @@
 <template name="notFound">
-    <div class="row-fluid">
-        <div style="text-align: center" class="span5">
+    <div class="row">
+        <div style="text-align: center" class="col-xs-5">
             <p class="large-font">Page not found :(</p>
         </div>
     </div>
