--- a/lair/client/views/contributors/contributors.html
+++ b/lair/client/views/contributors/contributors.html
@@ -1,20 +1,20 @@
 <template name="contributors">
-    <div class="row-fluid">
-        <div class="span2">
+    <div class="row">
+        <div class="col-xs-2">
             {{> sideNav}}
         </div>
-        <div class="span10">
-            <div class="row-fluid">
-                <div class="span6">
+        <div class="col-xs-10">
+            <div class="row">
+                <div class="col-xs-6">
                     <button id="move-users" class="btn btn-primary">Move to contributors</button>
                 </div>
-                <div class="span6">
+                <div class="col-xs-6">
                     <button id="move-contributors" class="btn btn-primary">Remove contributors</button>
                 </div>
             </div>
             <br />
-            <div class="row-fluid">
-                <div class="span6">
+            <div class="row">
+                <div class="col-xs-6">
                     <table class="table table-bordered table-striped">
                         <caption>Users</caption>
                         <thead>
@@ -35,7 +35,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="span6">
+                <div class="col-xs-6">
                     <table class="table table-bordered table-striped">
                         <caption>Contributors</caption>
                         <thead>
