--- a/lair/client/views/credentials/credential_list.html
+++ b/lair/client/views/credentials/credential_list.html
@@ -1,19 +1,19 @@
 <template name="credentialList">
-    <div class="row-fluid">
-        <div class="span2">
+    <div class="row">
+        <div class="col-xs-2">
             {{> sideNav}}
         </div>
-        <div class="span10">
-            <div class="row-fluid">
-                <div class="span12">
+        <div class="col-xs-10">
+            <div class="row">
+                <div class="col-xs-12">
                     <a href="/project/{{projectId}}/credentials/new" class="btn btn-success">Add a new set of credentials</a>
                     <button id="remove-credentials" class="btn btn-danger"><i class="fa fa-trash-o"></i>
                     </button>
                 </div>
             </div>
             <br />
-            <div class="row-fluid">
-                <div class="span12">
+            <div class="row">
+                <div class="col-xs-12">
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
@@ -45,6 +45,5 @@
                 </div>
             </div>
         </div>
-
     </div>
 </template>
