--- a/lair/client/views/files/file_list.html
+++ b/lair/client/views/files/file_list.html
@@ -1,19 +1,19 @@
 <template name="fileList">
-    <div class="row-fluid">
-        <div class="span2">
+    <div class="row">
+        <div class="col-xs-2">
             {{> sideNav}}
         </div>
-        <div class="span10">
+        <div class="col-xs-10">
             {{> alerts}}
-            <div class="row-fluid">
-                <div class="span12">
+            <div class="row">
+                <div class="col-xs-12">
                     <button class="btn btn-danger" id="remove-files"><i class="fa fa-trash-o"></i>
                     </button>
                 </div>
             </div>
             <br />
-            <div class="row-fluid">
-                <div class="span6">
+            <div class="row">
+                <div class="col-xs-6">
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
@@ -34,7 +34,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="span6">
+                <div class="col-xs-6">
                     <form>
                         <p>Add link to file</p>
                         <input type="text" name="file-name" class="input-block-level" placeholder="Name" />
