--- a/lair/client/views/hosts/add_host.html
+++ b/lair/client/views/hosts/add_host.html
@@ -1,15 +1,15 @@
 <template name="addHost">
-    <div class="row-fluid">
-        <div class="span2">
+    <div class="row">
+        <div class="col-xs-2">
             {{> sideNav}}
         </div>
-        <div class="span4">
+        <div class="col-xs-4">
             {{> alerts}}
             <form>
-                <input type="text" class="span12" placeholder="IP Address *Required" name="string-addr" />
-                <input type="text" class="span12" placeholder="MAC Address" name="mac-addr" />
-                <input type="text" class="span12" placeholder="Hostname" name="hostname" />
-                <input type="text" class="span12" placeholder="Operating System" name="os" />
+                <input type="text" class="col-xs-12" placeholder="IP Address *Required" name="string-addr" />
+                <input type="text" class="col-xs-12" placeholder="MAC Address" name="mac-addr" />
+                <input type="text" class="col-xs-12" placeholder="Hostname" name="hostname" />
+                <input type="text" class="col-xs-12" placeholder="Operating System" name="os" />
                 <button type="submit" class="btn btn-block btn-primary">Submit</button>
             </form>
         </div>
