--- a/lair/client/views/hosts/includes/host_gist.html
+++ b/lair/client/views/hosts/includes/host_gist.html
@@ -1,7 +1,7 @@
 <template name="hostGist">
     {{#with host}}
-    <div class="row-fluid">
-        <div class="span4">
+    <div class="row">
+        <div class="col-xs-4">
             <ul class="unstyled">
                 <li><strong>IP Address: </strong>{{string_addr}}</li>
                 <li><strong>MAC Address: </strong>{{mac_addr}}</li>
@@ -9,7 +9,7 @@
                 <li class="hover-hand host-status {{status}}">&nbsp;</li>
             </ul>
         </div>
-        <div class="span6">
+        <div class="col-xs-6">
             <ul class="unstyled">
                 <li><strong>Hostname: </strong>{{hostnames.[0]}}</li>
                 <li><strong>OS: </strong>{{os.fingerprint}}</li>
@@ -21,7 +21,7 @@
                 </li>
             </ul>
         </div>
-        <div class="span2">
+        <div class="col-xs-2">
             <a href="#removeHostModal" role="button" class="btn btn-danger pull-right" data-toggle="modal"><i class="fa fa-trash-o hover-hand"></i></a>
             <button id="next-host" class="btn pull-right"><i class="fa fa-fast-forward"></i>
             </button>
