--- a/lair/client/views/hosts/includes/host_nav.html
+++ b/lair/client/views/hosts/includes/host_nav.html
@@ -1,6 +1,6 @@
 <template name="hostNav">
-    <div class="row-fluid">
-        <div class="span12">
+    <div class="row">
+        <div class="col-xs-12">
             <ul class="nav nav-tabs">
                 <li class="{{activeRouteClass 'hostServiceList'}}"><a href="/project/{{projectId}}/hosts/{{hostId}}/services">Services</a>
                 </li>
