--- a/lair/client/views/hosts/tabs/add_host_os.html
+++ b/lair/client/views/hosts/tabs/add_host_os.html
@@ -1,14 +1,14 @@
 <template name="addHostOs">
-  <div class="row-fluid">
-    <div class="span2">
+  <div class="row">
+    <div class="col-xs-2">
       {{> sideNav}}
     </div>
-    <div class="span4">
+    <div class="col-xs-4">
       {{> alerts}}
       <form>
-        <input name="fingerprint" type="text" class="span12" placeholder="Fingerprint *Required" />
-        <input name="tool" type="text" class="span12" placeholder="Identified By (e.g. Manual)" />
-        <input name="weight" type="number" class="span12" min="0" max="100" step="any" placeholder="Weight" />
+        <input name="fingerprint" type="text" class="col-xs-12" placeholder="Fingerprint *Required" />
+        <input name="tool" type="text" class="col-xs-12" placeholder="Identified By (e.g. Manual)" />
+        <input name="weight" type="number" class="col-xs-12" min="0" max="100" step="any" placeholder="Weight" />
         <button type="submit" class="btn btn-block btn-primary">Submit</button>
       </form>
     </div>
