--- a/lair/client/views/hosts/tabs/add_hostname.html
+++ b/lair/client/views/hosts/tabs/add_hostname.html
@@ -1,12 +1,12 @@
 <template name="addHostname">
-  <div class="row-fluid">
-    <div class="span2">
+  <div class="row">
+    <div class="col-xs-2">
       {{> sideNav}}
     </div>
-    <div class="span4">
+    <div class="col-xs-4">
       {{> alerts}}
       <form>
-        <input name="hostname" type="text" class="span12" placeholder="Hostname" />
+        <input name="hostname" type="text" class="col-xs-12" placeholder="Hostname" />
         <button type="submit" class="btn btn-block btn-primary">Submit</button>
       </form>
     </div>
