--- a/lair/client/views/includes/chat.html
+++ b/lair/client/views/includes/chat.html
@@ -12,7 +12,8 @@
         <div id="chat-content">
             {{#each messages}}
             <div class="message">
-                <p><span class="inline-bold">{{user}}:&nbsp;</span>{{message}}</p>
+                <p>
+                    <span class="inline-bold">{{user}}:&nbsp;</span>{{message}}</p>
             </div>
             {{/each}}
         </div>
