--- a/lair/client/views/notes/note_list.html
+++ b/lair/client/views/notes/note_list.html
@@ -1,20 +1,20 @@
 <template name="noteList">
-    <div class="row-fluid">
-        <div class="span2">
+    <div class="row">
+        <div class="col-xs-2">
             {{> sideNav}}
         </div>
-        <div class="span10">
+        <div class="col-xs-10">
             {{> alerts}}
-            <div class="row-fluid">
-                <div class="span12">
+            <div class="row">
+                <div class="col-xs-12">
                     <button class="btn btn-success" id="new-note">Create a new note</button>
                     <button id="remove-notes" class="btn btn-danger"><i class="fa fa-trash-o"></i>
                     </button>
                 </div>
             </div>
             <br />
-            <div class="row-fluid">
-                <div class="span4">
+            <div class="row">
+                <div class="col-xs-4">
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
@@ -34,18 +34,19 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="span8">
+                <div class="col-xs-8">
                     {{#if note}}
                     <form>
                         <p class="medium-font">{{note.title}}</p>
-                        <p><strong>Last modified by: </strong>{{note.last_modified_by}}</p>
-                        <textarea name="content" class="span12" rows="15">{{note.content}}</textarea>
+                        <p>
+                            <strong>Last modified by: </strong>{{note.last_modified_by}}</p>
+                        <textarea name="content" class="col-xs-12" rows="15">{{note.content}}</textarea>
                         <button type="submit" class="btn btn-primary" id="save-note">Save</button>
                     </form>
                     {{else}}
                     <form>
                         <input type="text" name="title" placeholder="Title" class="input-block-level" />
-                        <textarea class="span12" rows="15" name="content" placeholder="Content"></textarea>
+                        <textarea class="col-xs-12" rows="15" name="content" placeholder="Content"></textarea>
                         <button type="submit" class="btn btn-primary">Save</button>
                     </form>
                     {{/if}}
