--- a/lair/client/views/password/change_password.html
+++ b/lair/client/views/password/change_password.html
@@ -1,16 +1,15 @@
 <template name="changePassword">
-    <div class="row-fluid">
-        <div class="span12">
+    <div class="row">
+        <div class="col-xs-12">
             {{> alerts}}
         </div>
     </div>
-    <div class="row-fluid">
-        <div class="span4">
+    <div class="row">
+        <div class="col-xs-4">
             <form>
                 <input type="password" name="password" class="input-block-level" placeholder="New Password" />
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
             </form>
-
         </div>
     </div>
 </template>
