--- a/lair/client/views/ports/add_port.html
+++ b/lair/client/views/ports/add_port.html
@@ -1,9 +1,9 @@
 <template name="addPort">
-    <div class="row-fluid">
-        <div class="span2">
+    <div class="row">
+        <div class="col-xs-2">
             {{> sideNav}}
         </div>
-        <div class="span4">
+        <div class="col-xs-4">
             {{> alerts}}
             <form>
                 <input name="port" class="input-block-level" type="number" min="0" max="65535" placeholder="Port" step="any" />
