--- a/lair/client/views/ports/includes/service_nav.html
+++ b/lair/client/views/ports/includes/service_nav.html
@@ -1,6 +1,6 @@
 <template name="serviceNav">
-    <div class="row-fluid">
-        <div class="span12">
+    <div class="row">
+        <div class="col-xs-12">
             <ul class="nav nav-tabs">
                 <li class="{{activeRouteClass 'serviceVulnerabilityList'}}"><a href="/project/{{projectId}}/services/{{portId}}/vulnerabilities">Vulnerabilities</a>
                 </li>
