--- a/lair/client/views/services/service_search.html
+++ b/lair/client/views/services/service_search.html
@@ -1,12 +1,12 @@
 <template name="serviceSearch">
-    <div class="row-fluid">
-        <div class="span2">
+    <div class="row">
+        <div class="col-xs-2">
             {{> sideNav}}
         </div>
-        <div class="span10">
+        <div class="col-xs-10">
             {{> alerts}}
-            <div class="row-fluid">
-                <div class="span12">
+            <div class="row">
+                <div class="col-xs-12">
                     <p>Searching returns a unique list services and associated hosts. All fields are optional and case insensitive.</p>
                     <form class="form-inline">
                         <input name="port" class="input-small" type="number" min="0" max="65535" placeholder="Port" step="any" />
@@ -18,8 +18,8 @@
                     </form>
                 </div>
             </div>
-            <div class="row-fluid">
-                <div class="span6">
+            <div class="row">
+                <div class="col-xs-6">
                     <table class="table table-bordered table-striped table-hover">
                         <thead>
                             <tr>
@@ -77,8 +77,8 @@
 </template>
 
 <template name="serviceSearchHostList">
-    <div class="span6">
+    <div class="col-xs-6">
         <p style="padding-left: 7px">Hosts</p>
-        <textarea id="host-textarea" class="copyonly full-height span12" readonly>{{hosts}}</textarea>
+        <textarea id="host-textarea" class="copyonly full-height col-xs-12" readonly>{{hosts}}</textarea>
     </div>
 </template>
