row-fluid ->row;span* -> col-xs-*

--- a/lair/client/views/settings/add_user.html
+++ b/lair/client/views/settings/add_user.html
@@ -1,7 +1,7 @@
 <template name="addUser">
     {{> alerts}}
-    <div class="row-fluid">
-        <div class="span4">
+    <div class="row">
+        <div class="col-xs-4">
             <form>
                 <input class="input-block-level" type="text" name="email" placeholder="Email address" />
                 <input class="input-block-level" type="password" name="password" placeholder="Password" />
