--- a/lair/client/views/settings/settings.html
+++ b/lair/client/views/settings/settings.html
@@ -1,7 +1,7 @@
 <template name="settings">
     {{> alerts}} {{> settingsNav}}
-    <div class="row-fluid">
-        <div class="span4">
+    <div class="row">
+        <div class="col-xs-4">
             <ul class="unstyled">
                 {{#if allowClientSideUpdates}}
                 <li>
