--- a/lair/client/views/settings/users.html
+++ b/lair/client/views/settings/users.html
@@ -1,14 +1,14 @@
 <template name="users">
     {{> alerts}} {{> settingsNav}}
-    <div class="row-fluid">
-        <div class="span12">
+    <div class="row">
+        <div class="col-xs-12">
             <a href="{{pathFor 'addUser'}}" class="btn btn-success">Add a new user</a>
             <a href="#removeUserModal" role="button" class="btn btn-danger" data-toggle="modal"><i class="fa fa-trash-o"></i></a>
         </div>
     </div>
     <br />
     <div class="row-fluid">
-        <div class="span6">
+        <div class="col-xs-6">
             <table class="table table-bordered table-striped">
                 <thead>
                     <tr>
