--- a/lair/client/views/credentials/add_credential_full.html
+++ b/lair/client/views/credentials/add_credential_full.html
@@ -6,13 +6,48 @@
         <div class="col-xs-4">
             {{> alerts}}
             <p>Host and Port fields are required. Password, Username, and Hash fields are optional, blank fields will be filled with 'unknown'.</p>
-            <form>
-                <input type="text" class="col-xs-12" placeholder="Host" name="host" />
-                <input type="number" class="col-xs-12" min="0" max="65535" step="any" placeholder="Port" name="port" />
-                <input type="text" class="col-xs-12" placeholder="Username" name="username" />
-                <input type="text" class="col-xs-12" placeholder="Password" name="password" />
-                <input type="text" class="col-xs-12" placeholder="Hash" name="hash" />
-                <button type="submit" class="btn btn-block btn-primary">Submit</button>
+            <form class="form-horizontal">
+                <fieldset>
+                    <legend>New Credential</legend>
+                    <div class="form-group">
+                        <label class="col-xs-4 control-label" for="host">Host</label>
+                        <div class="col-xs-8">
+                            <input id="host" name="host" type="text" placeholder="" class="form-control input-md" required="">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-xs-4 control-label" for="port">Port</label>
+                        <div class="col-xs-8">
+                            <input id="port" name="port" type="number" min="0" max="65535" step="any" placeholder="" class="form-control input-md" required="">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-xs-4 control-label" for="username">Username</label>
+                        <div class="col-xs-8">
+                            <input id="username" name="username" type="text" placeholder="" class="form-control input-md">
+
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-xs-4 control-label" for="password">Password</label>
+                        <div class="col-xs-8">
+                            <input id="password" name="password" type="text" placeholder="" class="form-control input-md">
+
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-xs-4 control-label" for="hash">Hash</label>
+                        <div class="col-xs-8">
+                            <input id="hash" name="hash" type="text" placeholder="" class="form-control input-md">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-xs-4 control-label" for=""></label>
+                        <div class="col-xs-4">
+                            <button id="" name="" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                </fieldset>
             </form>
         </div>
     </div>
