--- a/lair/client/views/notes/note_list.html
+++ b/lair/client/views/notes/note_list.html
@@ -37,17 +37,30 @@
                 <div class="col-xs-8">
                     {{#if note}}
                     <form>
-                        <p class="medium-font">{{note.title}}</p>
-                        <p>
-                            <strong>Last modified by: </strong>{{note.last_modified_by}}</p>
-                        <textarea name="content" class="col-xs-12" rows="15">{{note.content}}</textarea>
-                        <button type="submit" class="btn btn-primary" id="save-note">Save</button>
+                        <div class="form-group col-xs-12">
+                            <p class="medium-font">{{note.title}}</p>
+                            <p>
+                                <strong>Last modified by: </strong>{{note.last_modified_by}}
+                            </p>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <textarea name="content" class="col-xs-11 form-control" rows="15">{{note.content}}</textarea>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <button type="submit" class="btn btn-primary" id="save-note">Save</button>
+                        </div>
                     </form>
                     {{else}}
                     <form>
-                        <input type="text" name="title" placeholder="Title" class="input-block-level" />
-                        <textarea class="col-xs-12" rows="15" name="content" placeholder="Content"></textarea>
-                        <button type="submit" class="btn btn-primary">Save</button>
+                        <div class="form-group col-xs-8">
+                            <input type="text" name="title" placeholder="Title" class="form-control" />
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <textarea class="col-xs-11 form-control" rows="15" name="content" placeholder="Content"></textarea>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <button type="submit" class="btn btn-primary">Save</button>
+                        </div>
                     </form>
                     {{/if}}
                 </div>
