--- a/lair/client/views/password/change_password.html
+++ b/lair/client/views/password/change_password.html
@@ -7,8 +7,12 @@
     <div class="row">
         <div class="col-xs-4">
             <form>
-                <input type="password" name="password" class="input-block-level" placeholder="New Password" />
-                <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                <div class="form-group col-xs-12">
+                    <input type="password" name="password" class="form-control" placeholder="New Password" />
+                </div>
+                <div class="form-group col-xs-4">
+                    <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                </div>
             </form>
         </div>
     </div>
